# freetype-gl-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs
freetype-gl/: texture-font.c  texture-font.h
src/: ffi.rs  lib.rs  link.rs  link_windowsd.rs
