[package]
name    = "freetypegl"
version = "0.3.3"
authors = [ "Arturo Castro <mail@arturocastro.net>" ] # FIXME: add the contributors.
description = "Rust build helpers and bindings for freetype-gl."
license-file = "freetype-gl/LICENSE"
homepage = "https://github.com/arturoc/freetype-gl-rs"
repository = "https://github.com/arturoc/freetype-gl-rs"
build = "build.rs"

[lib]
name = "freetypegl"
path = "src/lib.rs"

[dependencies]
freetype-src-sys = "0.1"

[build-dependencies]
cmake = "0.1"