[package]
name    = "freetypegl"
version = "0.3.6"
authors = [ "Arturo Castro <mail@arturocastro.net>" ] # FIXME: add the contributors.
description = "Rust build helpers and bindings for freetype-gl."
license-file = "LICENSE"
homepage = "https://github.com/arturoc/freetype-gl-rs"
repository = "https://github.com/arturoc/freetype-gl-rs"

[lib]
name = "freetypegl"
path = "src/lib.rs"

[dependencies]
freetype-gl-sys = "0.1"