[package]
name    = "freetypegl"
version = "0.3.6"
authors = [ "Arturo Castro <mail@arturocastro.net>" ] # FIXME: add the contributors.
description = "Rust build helpers and bindings for freetype-gl."
license-file = "LICENSE"
homepage = "https://github.com/arturoc/freetype-gl-rs"
repository = "https://github.com/arturoc/freetype-gl-rs"

[lib]
name = "freetypegl"
path = "src/lib.rs"

[dependencies]
freetype-gl-sys = "0.1"
freetype-src-sys = "0.1"

[patch.crates-io]
freetype-gl-sys = {git = "https://github.com/arturoc/freetype-gl-sys", rev="65c5b57136e02660ce0a294b4c4b4b21473a2691"}